<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:paddingBottom="@dimen/spacing_double"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_device_setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_double">

            <ImageView
                android:id="@+id/picturePreview"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/addPicture"
                android:layout_width="match_parent"
                android:layout_height="168dp"
                android:background="@color/backgroundWhite"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/addPictureIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_photo_camera_black_24dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:text="@string/text_hint_add_device_picture"
                    android:textColor="@color/blue_grey_800" />

            </LinearLayout>
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/nfc_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/text_hint_nfc_id"
                android:maxLines="1"
                android:text="@string/text_hint_get_nfc_tag" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/container_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_container_number"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/owner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_owner"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/freight_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_origin"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_destination"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/vessel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_vessel"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/voyage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_voyage"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_double"
            android:paddingRight="@dimen/spacing_double">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/frequency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_hint_freight_frequency"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>